--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,33 @@
 @import 'tailwindcss';
-@import './common/theme.css';
+/* @import './common/theme.css'; */
 /* 수동으로 다크모드 적용 하는 경우 */
 /* @custom-variant dark (&:where(.dark, .dark *)); */
 
 /* :root {
   --color-likelion: oklch(0.72 0.11 178);
 } */
+
+@theme {
+  --color-like: red;
+  --color-lion: green;
+
+  /* --building: url(/src/assets/images/building.avif); */
+  --building: url(../src/assets/images/building.avif);
+}
+
+@layer components {
+  .bootcamp {
+    background-color: orange;
+    padding: 1em;
+    margin-block: 1em;
+    border: 5px solid blue;
+  }
+
+  .like {
+    @apply border-4 border-red-500 p-4 my-4 bg-violet-300;
+  }
+}
+
+@utility shape-circle {
+  shape-outside: circle(50%);
+}
